# template

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
conf/: yaml_conf.yaml
proto/: CMakeLists.txt  test.proto
src/: tools.cpp  tools.h  yaml_use.cpp
src/utils/: status.h
tests/: CMakeLists.txt  main_test.cpp  proto_test.cpp  tools_test.cpp
